# gitignores

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  release.yml  update.yml
src/: common.rs  community.rs  gitref.rs  global.rs  lib.rs  root.rs
updater/: .gitignore  Cargo.toml  gitignores.toml
updater/src/: main.rs
