[package]
name = "gitignores"
version = "1.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "CC0-1.0"
description = "GitHub’s collection of gitignores, embedded, automatically updated"
keywords = ["gitignore", "embed", "git"]
categories = ["development-tools", "filesystem", "no-std"]

documentation = "https://docs.rs/gitignores"
homepage = "https://watchexec.github.io/#gitignores"
repository = "https://github.com/watchexec/gitignores"
readme = "README.md"

edition = "2018"
exclude = ["/.github", "/updater"]

[features]
default = ["community", "global", "root"]
community = []
global = []
root = []

[dependencies]
color-eyre = "0.5.11"
dunce = "1.0.2"
reqwest = "0.11.4"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5.8"
