[package]
name = "gitignores-updater"
version = "1.0.0"
publish = false
edition = "2018"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Updater for the gitignores crate"

[dependencies]
color-eyre = "0.5.11"
dunce = "1.0.2"
reqwest = "0.11.4"
semver = "1.0.4"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5.8"
