[package]
name = "gitignores-updater"
version = "1.0.0"
publish = false
edition = "2018"

authors = ["FeÌlix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Updater for the gitignores crate"

[dependencies]
blake3 = "1.0.0"
color-eyre = "0.5.11"
dunce = "1.0.2"
git2 = "0.13.22"
heck = "0.3.3"
itertools = "0.10.1"
semver = "1.0.4"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
toml = "0.5.8"
walkdir = "2.3.2"
